First commited as before_57535_rev1