@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2015 IBM Corporation and others.
+ * Copyright (c) 2004, 2006 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -16,6 +16,7 @@ import java.util.Map;
 import org.eclipse.core.commands.IHandlerAttributes;
 import org.eclipse.jface.action.IAction;
 import org.eclipse.jface.util.IPropertyChangeListener;
+import org.eclipse.jface.util.PropertyChangeEvent;
 import org.eclipse.swt.widgets.Event;
 import org.eclipse.ui.actions.RetargetAction;
 
@@ -126,22 +127,26 @@ public final class ActionHandler extends AbstractHandler {
         if (propertyChangeListener == null) {
             attributeValuesByName = getAttributeValuesByNameFromAction();
 
-            propertyChangeListener = propertyChangeEvent -> {
-               String property = propertyChangeEvent.getProperty();
-               if (IAction.ENABLED.equals(property)
-			    || IAction.CHECKED.equals(property)
-			    || IHandlerAttributes.ATTRIBUTE_HANDLED
-			            .equals(property)) {
+            propertyChangeListener = new IPropertyChangeListener() {
+                @Override
+				public void propertyChange(
+                        PropertyChangeEvent propertyChangeEvent) {
+                    String property = propertyChangeEvent.getProperty();
+                    if (IAction.ENABLED.equals(property)
+                            || IAction.CHECKED.equals(property)
+                            || IHandlerAttributes.ATTRIBUTE_HANDLED
+                                    .equals(property)) {
 
-			Map previousAttributeValuesByName = attributeValuesByName;
-			attributeValuesByName = getAttributeValuesByNameFromAction();
-			if (!attributeValuesByName
-			        .equals(previousAttributeValuesByName)) {
-				fireHandlerChanged(new HandlerEvent(
-			            ActionHandler.this, true,
-			            previousAttributeValuesByName));
-			}
-               }
+                        Map previousAttributeValuesByName = attributeValuesByName;
+                        attributeValuesByName = getAttributeValuesByNameFromAction();
+                        if (!attributeValuesByName
+                                .equals(previousAttributeValuesByName)) {
+							fireHandlerChanged(new HandlerEvent(
+                                    ActionHandler.this, true,
+                                    previousAttributeValuesByName));
+						}
+                    }
+                }
             };
         }
 
@@ -233,7 +238,7 @@ public final class ActionHandler extends AbstractHandler {
         }
         map.put(ATTRIBUTE_HANDLED, handled ? Boolean.TRUE : Boolean.FALSE);
         map.put(ATTRIBUTE_ID, action.getId());
-		map.put(ATTRIBUTE_STYLE, Integer.valueOf(action.getStyle()));
+        map.put(ATTRIBUTE_STYLE, new Integer(action.getStyle()));
         return Collections.unmodifiableMap(map);
     }
 
